Change of layout
Sidebar sent to footer. Keeping experimenting with 960 grid.

--- a/index.html
+++ b/index.html
@@ -19,24 +19,50 @@
 		<!-- Contenedor principal-->
 		<section class="container_8" id="wrapper">			
 			<!-- Contenido derecha -->
-			<header class="grid_6 alpha" id="main-content">	
+			<header class="grid_8 alpha" id="main-content">	
 				<!-- Gran Titulo-->
 				<div class="grid_3 alpha">
 					<div class="grid_8 alpha main-message">Condición</div>
 				</div>
 				<div class="grid_5 sufix_3 alts">
-					<div class="grid_8 main-message alternative">alternativa</div>
-					<div class="clear"></div>
-					<div class="grid_8 main-message alternative">alternativa</div>
-					<div class="clear"></div>
-					<div class="grid_8 main-message alternative">alternativa</div>
-					<div class="clear"></div>
-					<div class="grid_8 main-message alternative">alternativa</div>
-					<div class="clear"></div>
-					<div class="grid_8 main-message alternative">alternativa</div>
-					<div class="clear"></div>
-					<div class="grid_8 main-message alternative">alternativa</div>
-					<div class="clear"></div>
+					<div class="grid_8" id="alternative-container">
+						<div class="grid_8 main-message alternative">
+							<p>alternativa</p>
+							<img src="#" width="300" height="300" />
+							<p>texto referencial</p>
+						</div>
+						<div class="clear"></div>
+						<div class="grid_8 main-message alternative">
+							<p>alternativa</p>
+							<img src="#" width="300" height="300" />
+							<p>texto referencial</p>
+						</div>
+						<div class="clear"></div>
+						<div class="grid_8 main-message alternative">
+							<p>alternativa</p>
+							<img src="#" width="300" height="300" />
+							<p>texto referencial</p>
+						</div>
+						<div class="clear"></div>
+						<div class="grid_8 main-message alternative">
+							<p>alternativa</p>
+							<img src="#" width="300" height="300" />
+							<p>texto referencial</p>
+						</div>
+						<div class="clear"></div>
+						<div class="grid_8 main-message alternative">
+							<p>alternativa</p>
+							<img src="#" width="300" height="300" />
+							<p>texto referencial</p>
+						</div>
+						<div class="clear"></div>
+						<div class="grid_8 main-message alternative">
+							<p>alternativa</p>
+							<img src="#" width="300" height="300" />
+							<p>texto referencial</p>
+						</div>
+						<div class="clear"></div>
+					</div>
 				</div>
 				<div class="clear"></div>
 				<!-- Fin Gran Titulo-->
@@ -45,9 +71,27 @@
 				<div class="grid_8 alpha central-bar"><h1>¿QUÉ PROYECTO HARÍAS REALIDAD?</h1></div>
 				<div class="clear"></div>
 				<!-- Fin Barra central-->
+				
+				<!-- Contenedor FB Comments-->
+				<div class="grid_8 alpha">
+				</div>
+				<div class="clear"></div>
+				<!-- Fin Contenedor FB Comments-->
+				<!-- Contenedor de actividad social -->
+				<div class="grid_8 alpha">
+					<!-- Facebook activity -->
+					<div class="grid_4 alpha"></div>
+					<!-- Fin Facebook activity -->
+					<!-- Twitter activity -->
+					<div class="grid_4 omega"></div>
+					<!-- Fin Twitter activity -->
+				</div>
+				<div class="clear"></div>
+				<!-- Fin Contenedor de actividad social -->
 			</header>
 			<!-- Fin Contenido derecha -->
-			<!-- Sidebar-->
+			<!--
+			
 			<aside class="grid_2 omega" id="sidebar">
 				<article class="extra">
 					<h3>UN TITULO</h3>
@@ -65,8 +109,9 @@
 				</article>
 				<div class="clear"></div>
 			</aside>
-			<!-- Fin Sidebar-->
+			-->
 		</section>
 		<!-- Fin Contenedor principal-->
 	</body>
+	
 	
